<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_executor_testbench</name>
  <version>0.0.1</version>
  <description>RCLCPP-Executor performance benchmarking</description>
  <maintainer email="martin.cornelis@nobleo.nl">Martin Cornelis</maintainer>
  <license>Apache-2.0</license>
  <author>Martin Cornelis</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>static_executor</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>static_executor</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
